stylesheet.css
body {
  background-color: #3F51B5;
}

*{
  font-family: Roboto Mono;
}

#calculator-body {
  height: 700px;
  width: 437.5px;
  margin: 5% auto 0% auto;
  border-radius: 3px;
  background-color: #880E4F;
  box-shadow: 1px 1px 7px black;
}

#screen {
  height: 12.5%;
  width: 90%;
  margin: 5%;
  border-radius: 3px;
  background-color: #F3E5F5;
  box-shadow: 1px 1px 5px black;
  text-align: right;
  font-size: 300%;
  display: inline-block;
}
  #screen:before {
    content: '';
    height: 100%;
    display: inline-block;
    vertical-align: middle;
  }

#button-container {
  height: 77.5%;
  width: 90%;
  margin: 0% 5% 5% 5%;
}

.row {
  height: 18%;
  width: 102%;
  margin-bottom: 4%;
}

.calculator-button {
  height: 100%;
  width: 23%;
  float: left;
  margin-right: 2%;
  border-radius: 3px;
  background-color: #F3E5F5;
  box-shadow: 1px 1px 5px black;
  font-size: 150%;
  color: black;
  text-decoration: none;
  text-align: center;
}
  
  .calculator-button:hover {
    text-decoration: none;
  }


  .calculator-button:before {
    content: '';
    height: 100%;
    display: inline-block;
    vertical-align: middle;
  }

#eq-button {
  width: 48%;
}

